# illuminate

./: README.md  build.gradle.kts  settings.gradle.kts
algorithm/: pyproject.toml
algorithm/src/: main.py
src/main/kotlin/com/jetslop/illuminate/ai/: AIService.kt
src/main/kotlin/com/jetslop/illuminate/model/: ProjectStructure.kt
src/main/kotlin/com/jetslop/illuminate/scanner/: LanguageScanner.kt  PythonLanguageScanner.kt
src/main/kotlin/com/jetslop/illuminate/settings/: IlluminateConfigurable.kt
src/main/kotlin/com/jetslop/illuminate/ui/: ChatPanel.kt  CodeHudProvider.kt  HudDetailPopup.kt
src/main/resources/web/: graph.html  starthere.html
